# PropAcousticsPy

./: .gitignore  README.md  pyproject.toml
PropAcousticsPy/: __init__.py
PropAcousticsPy/Hanson/: far_field.py  near_field.py
PropAcousticsPy/PotentialInteraction/: ConformalPIN.py  PIN.py  beam_to_blade.py  blade_to_beam.py
PropAcousticsPy/SourceMode/: SourceMode.py
PropAcousticsPy/TailoredGreen/: CylinderGreen.py  HalfCylinderGreen.py  TailoredGreen.py
