[project]
name = "PropAcousticsPy"
version = "0.1.0"
description = "Propelller Acoustics Modelling"
authors = [{name = "Jakub Siemaszko"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "h5py>=3.8",
    "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"